codepkg/objects/Price_Specification_Book__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price &amp; Specification Books</relationshipLabel>
        <relationshipName>Price_Specification_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Book_Id__c</fullName>
        <formula>Id</formula>
        <label>Book Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Status__c</fullName>
        <label>Book Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired/Do not Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Vertical__c</fullName>
        <label>Business Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hanger Business</fullName>
                    <label>Hangers &amp; Accessories</label>
                </value>
                <value>
                    <fullName>Flexible Packaging</fullName>
                </value>
                <value>
                    <fullName>TLA</fullName>
                </value>
                <value>
                    <fullName>Labels &amp; Tickets</fullName>
                </value>
                <value>
                    <fullName>EAS &amp; RFID</fullName>
                </value>
                <value>
                    <fullName>MCare</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>M-Care</fullName>
                    <isActive>false</isActive>
                    <label>M-Care</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mainetti_Company__c</fullName>
        <label>Mainetti Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Licensee Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Licensee Cambodia</fullName>
                </value>
                <value>
                    <fullName>Licensee Egypt</fullName>
                </value>
                <value>
                    <fullName>Licensee Indonesia</fullName>
                </value>
                <value>
                    <fullName>Licensee Israel</fullName>
                </value>
                <value>
                    <fullName>Licensee Malaysia</fullName>
                </value>
                <value>
                    <fullName>Licensee Philippines</fullName>
                </value>
                <value>
                    <fullName>Licensee Sri Lanka</fullName>
                </value>
                <value>
                    <fullName>Licensee Taiwan</fullName>
                </value>
                <value>
                    <fullName>Licensee Thailand</fullName>
                </value>
                <value>
                    <fullName>Licensee UAE</fullName>
                </value>
                <value>
                    <fullName>Mainetti Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Mainetti Canada</fullName>
                </value>
                <value>
                    <fullName>Mainetti Germany</fullName>
                </value>
                <value>
                    <fullName>Mainetti Group</fullName>
                </value>
                <value>
                    <fullName>Mainetti Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Mainetti India</fullName>
                </value>
                <value>
                    <fullName>Mainetti Indonesia</fullName>
                </value>
                <value>
                    <fullName>Mainetti Italy SpA</fullName>
                </value>
                <value>
                    <fullName>Mainetti Korea</fullName>
                </value>
                <value>
                    <fullName>Mainetti Morocco</fullName>
                </value>
                <value>
                    <fullName>Mainetti Netherlands</fullName>
                </value>
                <value>
                    <fullName>Mainetti Pakistan</fullName>
                </value>
                <value>
                    <fullName>Mainetti Portugal</fullName>
                </value>
                <value>
                    <fullName>Mainetti Romania</fullName>
                </value>
                <value>
                    <fullName>Mainetti Shenzhen</fullName>
                </value>
                <value>
                    <fullName>Mainetti Singapore</fullName>
                </value>
                <value>
                    <fullName>Mainetti SriLanka</fullName>
                </value>
                <value>
                    <fullName>Mainetti Suzhou</fullName>
                </value>
                <value>
                    <fullName>Mainetti Turkey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>LOCAL</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>REST OF THE WORLD</fullName>
                </value>
                <value>
                    <fullName>WOOD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OLE_Row_Id__c</fullName>
        <label>OLE Row Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price_Book_Category__c</fullName>
        <label>Price Book Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Global</fullName>
                </value>
                <value>
                    <fullName>Account Local</fullName>
                </value>
                <value>
                    <fullName>General Account Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retailer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Code</label>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>Price &amp; Specification Books (Retailer Code)</relationshipLabel>
        <relationshipName>Price_Specification_Books1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vender_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Code</label>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>Price &amp; Specification Books</relationshipLabel>
        <relationshipName>Price_Specification_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Price &amp; Specification Book</label>
    <listViews>
        <fullName>All_EU_Price_Books</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Mainetti_Company__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book__c.Price_Book</value>
        </filters>
        <filters>
            <field>Market_Segment__c</field>
            <operation>equals</operation>
            <value>EU</value>
        </filters>
        <label>All EU Price Books</label>
    </listViews>
    <listViews>
        <fullName>All_Price_Book</fullName>
        <columns>NAME</columns>
        <columns>Price_Book_Category__c</columns>
        <columns>Account__c</columns>
        <columns>Book_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Mainetti_Company__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book__c.Price_Book</value>
        </filters>
        <label>All Price Books</label>
    </listViews>
    <listViews>
        <fullName>All_Specification_Books</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Book_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Mainetti_Company__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book__c.Specification_Book</value>
        </filters>
        <filters>
            <field>Book_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Specification Books</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Specification_Books_UK</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Book_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Mainetti_Company__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book__c.Specification_Book</value>
        </filters>
        <filters>
            <field>Market_Segment__c</field>
            <operation>equals</operation>
            <value>UK</value>
        </filters>
        <label>All Specification Books-UK</label>
    </listViews>
    <listViews>
        <fullName>All_USA_Price_Books</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Book_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Mainetti_Company__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book__c.Price_Book</value>
        </filters>
        <filters>
            <field>Market_Segment__c</field>
            <operation>equals</operation>
            <value>USA</value>
        </filters>
        <label>All USA Price Books</label>
    </listViews>
    <listViews>
        <fullName>Online_Enquiry_Decathlon</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Price_Book_Category__c</columns>
        <columns>Book_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Mainetti_Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>DECATHLON</value>
        </filters>
        <filters>
            <field>Book_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Online Enquiry - Decathlon</label>
        <language>en_US</language>
        <sharedTo>
            <role>Administrator_Role</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Online_Enquiry_JC_PENNEY</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Price_Book_Category__c</columns>
        <columns>Book_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Mainetti_Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>JC PENNEY</value>
        </filters>
        <filters>
            <field>Book_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Mainetti_Company__c</field>
            <operation>equals</operation>
            <value>Mainetti Hong Kong</value>
        </filters>
        <filters>
            <field>Price_Book_Category__c</field>
            <operation>equals</operation>
            <value>Account Global</value>
        </filters>
        <label>Online Enquiry - JC PENNEY</label>
        <sharedTo>
            <group>Mainetti_Hong_Kong</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Online_Enquiry_MACY_S</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Price_Book_Category__c</columns>
        <columns>Book_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Mainetti_Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>MACY&apos;S</value>
        </filters>
        <filters>
            <field>Book_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Mainetti_Company__c</field>
            <operation>equals</operation>
            <value>Mainetti Hong Kong</value>
        </filters>
        <filters>
            <field>Price_Book_Category__c</field>
            <operation>equals</operation>
            <value>Account Global</value>
        </filters>
        <label>Online Enquiry - MACY&apos;S</label>
        <sharedTo>
            <group>Mainetti_Hong_Kong</group>
            <group>Mainetti_Suzhou</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Online_Enquiry_POLO</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Price_Book_Category__c</columns>
        <columns>Book_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Mainetti_Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>POLO RALPH LAUREN</value>
        </filters>
        <filters>
            <field>Book_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Mainetti_Company__c</field>
            <operation>equals</operation>
            <value>Mainetti Hong Kong</value>
        </filters>
        <filters>
            <field>Price_Book_Category__c</field>
            <operation>equals</operation>
            <value>Account Global</value>
        </filters>
        <label>Online Enquiry - POLO</label>
        <sharedTo>
            <group>Mainetti_Hong_Kong</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Online_Enquiry_SH</fullName>
        <booleanFilter>(1 OR 5 )AND 2 AND (3 or 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Price_Book_Category__c</columns>
        <columns>Book_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Mainetti_Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>MACY&apos;S</value>
        </filters>
        <filters>
            <field>Book_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Mainetti_Company__c</field>
            <operation>equals</operation>
            <value>Mainetti Suzhou</value>
        </filters>
        <filters>
            <field>Price_Book_Category__c</field>
            <operation>equals</operation>
            <value>Account Global</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>DECATHLON</value>
        </filters>
        <label>Online Enquiry - SH</label>
        <sharedTo>
            <group>Online_Enquiry_Shanghai_EU_Group</group>
            <group>Online_Enquiry_Shanghai_Group</group>
            <group>Online_Enquiry_Shanghai_NonContact_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>NAME</columns>
        <columns>Price_Book_Category__c</columns>
        <columns>Account__c</columns>
        <columns>Book_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Mainetti_Company__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Price_Specification_Book__c.Price_Book</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>care</value>
        </filters>
        <label>_Search</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price &amp; Specification Books</pluralLabel>
    <recordTypes>
        <fullName>Price_Book</fullName>
        <active>true</active>
        <label>Price Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>Specification_Book</fullName>
        <active>true</active>
        <label>Specification Book</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>